2006-03-31  David Reveman  <davidr@novell.com>

	* plugins/minimize.c (minDamageWindowRect): Never leave windows
	in scaled state.

	* src/screen.c (moveScreenViewport): Move hidden windows as well.

	* src/window.c (addWindow, activateWindow, hideWindow)
	(showWindow):
	* src/screen.c (enterShowDesktopMode, leaveShowDesktopMode):
	* src/event.c (handleEvent):
	* include/compiz.h: Fix up show desktop mode.

	* plugins/water.c (fboVertices): return 1.

2006-03-30  David Reveman  <davidr@novell.com>

	* src/texture.c (enableTexture): Always make sure mipmaps are up to
	date when using GL_LINEAR_MIPMAP_LINEAR filter.

2006-03-29  David Reveman  <davidr@novell.com>

	* gnome/window-decorator/gnome-window-decorator.c: Draw outline around
	window title text and buttons instead of small shadow.

	* src/event.c (handleEvent):
	* include/compiz.h:
	* src/window.c: Set allowed window actions more correctly.

	* plugins/move.c: Add opacity option.

	* plugins/Makefile.am: Add water plugin. It's not very useful yet
	and it needs more work but it's a good example of how to use
	GL_ARB_fragment_program and GL_EXT_framebuffer_object for visual
	effects.

	* src/screen.c (addScreen): Fix light position.

	* src/paint.c (paintWindow):
	* plugins/switcher.c (switchPaintThumb):
	* plugins/decoration.c (decorPaintWindow):
	* include/compiz.h: Make drawWindowTexture a screen function so that
	plugins can wrap it.

	* src/texture.c (enableTexture):
	* src/screen.c (addScreen):
	* include/compiz.h: GL_EXT_framebuffer_object and
	GL_ARB_fragment_program support.

2006-03-21  David Reveman  <davidr@novell.com>

	* gnome/window-decorator/gnome-window-decorator.c (lower_window): Don't
	try to lower a window below hidden windows or desktop windows.

2006-03-20  David Reveman  <davidr@novell.com>

	* plugins/wobbly.c (wobblyHandleEvent):
	xunmap -> xmap (François Ingelrest).

	* src/screen.c (isClientListWindow): All type of windows should go into
	the client lists (Thanks to Quinn Storm).
